Archive2/f1/c7c098a13e7bbf/output
main.cpp: In function 'int main()':
main.cpp:22:49: error: could not convert '{{0, 0, 0}, {0, 1, 0}, {0, 0, 0}}' from '<brace-enclosed initializer list>' to 'Kernel<int, 3ul, 3ul>'
     Kernel<int,3,3> k = {{0,0,0},{0,1,0},{0,0,0}};
                                                 ^
